--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,44 +1,124 @@
-body {
-	background-color: #f2f2f2;
-	font-family: Arial, sans-serif;
-}
-header {
-	background-color: #333;
-	color: #fff;
-	padding: 20px;
-	text-align: center;
-}
-main {
-	display: flex;
-	flex-wrap: wrap;
-	margin: 20px;
-}
-section {
-	position: relative;
-	width: calc(33.33% - 20px);
-	background-color: #fff;
-	border: 1px solid #000;
-	padding: 20px;
-	margin-right: 20px;
-	margin-bottom: 20px;
-	box-sizing: border-box;
-}
+/*basic style*/
+    * {
+        box-sizing: border-box;
+    }
 
-section:last-child {
-	margin-right: 0;
-}
+    body {
+        background-color: white;
+    }
 
-section h2 {
-	font-size: 125%;
-	margin-top: 0;
-}
+    h1 {
+       margin-bottom: 15px;
+    text-align: center;
+    color: #ff4532;
+    font-size: 50px;
+    }
 
-section p {
-	margin-top: 10px;
-}
+    section {
+        position: relative;
+        padding: 15px;
+        width: 90%;
+    }
 
-section::before {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 10px;}
+    p {
+        position: relative;
+        clear: right;
+    }
+
+    div {
+        position: relative;
+        background-color: gray;
+        border: 3.5px solid black;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: auto;
+    }
+
+    .sub1 {
+        float: right;
+        width: 100px;
+        padding: 5px;
+        margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: #FFB6C1;
+
+    }
+
+    .sub2 {
+        float: right;
+        color: white;
+        width: 100px;
+        padding: 5px;
+        margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: #FF0000;
+
+    }
+
+    .sub3 {
+        color: black;
+        float: right;
+        width: 100px;
+        padding: 5px;
+         margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: rgb(223, 212, 121);
+
+    }
+
+    .content {
+        padding: 5px;
+        border: none;
+        background-color: gray;
+        font-family: Helvetica;
+        color: black;
+        margin: 3px ;
+        height: 150px;
+        overflow: auto;
+    }
+
+    .row {
+        width: 90%;
+    }
+
+    /*desktop version*/
+    @media (min-width: 992px) {
+        .column-lg-4 {
+            float: left;
+            width: 33.33%;
+        }
+    }
+
+    /*tablet version*/
+    @media (min-width: 768px) and (max-width: 991px) {
+        .colmn-md-6 {
+            float: left;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .colmn-md-12 {
+            float: left;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    /*mobile version*/
+    @media (max-width: 767px) {
+        .colmn-sm-12 {
+            float: left;
+            width: 100%;
+        }
